Changelog
=========

6.1-dev - (unreleased)
----------------------
* Feature: added controls for reordering of related content
  [tiberich #13870]

6.0 - (2013-03-15)
------------------
* Bug fix: fixed generation of tabs call when IAutoRelations queryAdapter 
  returns no result
  [ichimdav]
* Feature: added information for contributors
  [ciobabog refs #13892]

5.9 - (2013-02-27)
------------------
* Bug fix: avoid crash for backwards and forward relations when relation is 
  None
  [ichimdav 13988]
* Bug fix: sort items in related items macro based on title
  [tiberich #13870]

5.8 - (2013-02-25)
------------------
* Bug fix: optimize Macro forward and backwards methods calls for similar
  performance gains like those done in 5.5
  [ichimdav #13771]
* Bug fix: Corrected missing i18n attributes for translations.
  [prospchr refs #13827]
* Bug fix: Added domain=eea.notranslation to views that don't need
  translations.
  [prospchr refs #13827]

5.7 - (2013-02-04)
------------------
* Change: optimized relatedItems macro tal definitions and reference listing
  url in a way that can work without our own extra packages
  [ichimdav #13677]

5.6 - (2013-01-28)
------------------
* Feature: added related content header to relatedItemsWithThumbs macro
  [ichimdav #13639]

5.5 - (2013-01-16)
------------------
* Bug fix: Optimize queryContentType component. Now it's 5 times faster
  [voineali refs #13590]

5.4 - (2013-01-15)
------------------
* Change: removed i18n information regarding pagination since no code for it
  is found inside eea.relations
  [ichimdav]

5.3 - (2013-01-10)
------------------
* Change: relationItems are now rendered by default with an album_view style
  which can be changed by supplying a template parameter
  [ichimdav #10182]
* Change: changed auto relations logic returns False instead of generator when
  there are no results
  [ichimdav #10182]

5.2 - (2012-11-22)
------------------