@@ -2,6 +2,12 @@
 <object name="portal_javascripts" meta_type="JavaScripts Registry">
  <javascript cacheable="True" compression="none" cookable="True"
     enabled="True"
-    expression="python: request.get('jsdisable','') != 'jquery'"
+    expression=""
     id="eeareferencebrowser.js" inline="False"/>
+
+<javascript cacheable="True" compression="none" cookable="True"
+            enabled="True"
+            expression=""
+            id="eea_relations.js" inline="False"
+            insert-after="eea-pagination.js"/>
 </object>
