@@ -41,7 +41,7 @@ Optional parameters:
       <h3 i18n:translate="">Related content</h3>
   </tal:relatedTitle>
 
-  <div class="sorter_ctl">
+  <div class="sorter_ctl" style="margin-bottom: 1.5em;">
       <label for="sort_by" i18n:translate="">Sort by: </label>
       <select name="sort_by">
           <option value="effective">Publishing date</option>
