@@ -34,4 +34,16 @@
 
   </genericsetup:upgradeSteps>
 
+    <!-- * => 6.1 -->
+    <genericsetup:upgradeSteps
+            source="*"
+            destination="6.1"
+            profile="eea.relations:default">
+
+        <genericsetup:upgradeDepends
+                title="Import jsregistry step from eea.relations profile"
+                import_steps="jsregistry"
+                />
+
+    </genericsetup:upgradeSteps>
 </configure>
